<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="5"
        android:columnCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_text"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/C"
            android:textSize="@dimen/_20ssp"
            android:backgroundTint="@color/light_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/off"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/off"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/light_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/percent"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/light_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/division"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/div"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/orange"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/_7"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/_8"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/_9"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/x"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/orange"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/_4"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/_5"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sex"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/_6"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtract"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/sub"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/orange"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/_3"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/sum"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/orange"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/_1"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/_2"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/_0"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/dot"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/dark_grey" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/equal"
            android:textSize="@dimen/_20ssp"
            app:backgroundTint="@color/orange"
            />




    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>